Fix for supporters icon flipover CSS issue on mobile

--- a/amani/themes/amani_zen/sass/mobile/_layout.scss
+++ b/amani/themes/amani_zen/sass/mobile/_layout.scss
@@ -728,20 +728,64 @@ div.breadcrumb {
 					background:$soft-grey;
 					padding:2em .2em;
 					margin-bottom:2em;
-					height:auto;
+					height:100%;
+					position:relative;
+					box-sizing:border-box;
 					&.views-column-last {
 						margin-right:0;
 					}
 					&:hover {
 						.views-field-field-short-sponsor-info {
-							display:block;
+							display:table-cell;
 							
-					
+							
 						}
 						
 						.views-field-field-image {
-							display:none;
+							
 						}
+					}
+				}
+				
+				.views-field-field-short-sponsor-info {
+					display:none;
+					text-align:center;
+					text-transform:lowercase;
+					font-weight:600;
+					font-size:1em;
+					width:100%;
+					height:inherit;
+					background:$blue;
+					z-index:200;
+					position:absolute;
+					padding:0 1em;
+					margin-left:0;
+					color:$text-black;
+					box-sizing:border-box;
+					top:0;
+					left:0;
+					vertical-align:middle;
+					
+					.field-content {
+						display:inline-block;
+						vertical-align:middle;
+						height:inherit;
+						line-height:1em;
+						top:30%;
+						position:relative;
+					}
+					
+					.sponsor-info {
+						
+					}
+					.sponsor-title {
+						text-transform:uppercase;
+					}
+					a.visit-sponsor {
+						display:block;
+						color:$text-black;
+						text-decoration:underline;
+						margin-top:1em;
 					}
 				}
 				
@@ -768,34 +812,7 @@ div.breadcrumb {
 					font-size:1em;
 				}
 				
-				.views-field-field-short-sponsor-info {
-					display:none;
-					text-align:center;
-					text-transform:lowercase;
-					font-weight:600;
-					font-size:1em;
-					width:100%;
-					height:auto;
-					background:$blue;
-					z-index:200;
-					position:relative;
-					padding:3em 2em 2em 2em;
-					margin-top:-26px;
-					margin-left:0;
-					color:$text-black;
-					.sponsor-info {
-						
-					}
-					.sponsor-title {
-						text-transform:uppercase;
-					}
-					a.visit-sponsor {
-						display:block;
-						color:$text-black;
-						text-decoration:underline;
-						margin-top:1em;
-					}
-				}
+				
 				.views-exposed-form {
 					display:block;
 					width:100%;
